Add-ons: fix remaining notes

--- a/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
@@ -155,7 +155,7 @@ setCookie.then(logCookie, logError);</pre>
      <dd>An extension can register a PAC file, but can also define explicit proxying rules.</dd>
      <dt>In Firefox</dt>
      <dd>The proxy API only supports the PAC file approach (since this is also possible using extended PAC files).
-     <div class="notecard note"><strong>Note:</strong> Because this API is incompatible with Chrome's <code>proxy</code> API, the Firefox proxy API is only available through the <code>browser</code> namespace.</div>
+     <div class="notecard note"><p><strong>Note:</strong> Because this API is incompatible with Chrome's <code>proxy</code> API, the Firefox proxy API is only available through the <code>browser</code> namespace.</p></div>
      </dd>
     </dl>
   </dd>
