--- a/files/en-us/mozilla/add-ons/webextensions/implement_a_settings_page/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/implement_a_settings_page/index.html
@@ -10,7 +10,7 @@ tags:
 <div>{{AddonSidebar}}</div>
 
 <div class="note">
-<p>The following example may not work, since the storage API doesn't work with a temporary Addon ID, see also https://bugzil.la/1323228.</p>
+<p><strong>Note:</strong> The following example may not work, since the storage API doesn't work with a temporary Addon ID, see also https://bugzil.la/1323228.</p>
 </div>
 
 <p>A settings page gives users a way to see and change settings (sometimes also called "preferences" or "options") for the extension.</p>
@@ -24,7 +24,7 @@ tags:
 </ul>
 
 <div class="note">
-<p>You can also open this page programmatically using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/runtime/openOptionsPage">runtime.openOptionsPage()</a></code> function.</p>
+<p><strong>Note:</strong> You can also open this page programmatically using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/runtime/openOptionsPage">runtime.openOptionsPage()</a></code> function.</p>
 </div>
 
 <h2 id="A_simple_extension">A simple extension</h2>
