--- a/files/en-us/mozilla/add-ons/webextensions/internationalization/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/internationalization/index.html
@@ -17,7 +17,7 @@ tags:
 <p>The <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions">WebExtensions</a> API has a rather handy module available for internationalizing extensions — <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/i18n">i18n</a>. In this article we'll explore its features and provide a practical example of how it works. The i18n system for extensions built using WebExtension APIs is similar to common JavaScript libraries for i18n such as <a href="http://i18njs.com/">i18n.js</a>.</p>
 
 <div class="note">
-<p>The example extension featured in this article — <a href="https://github.com/mdn/webextensions-examples/tree/master/notify-link-clicks-i18n">notify-link-clicks-i18n</a> — is available on GitHub. Follow along with the source code as you go through the sections below.</p>
+<p><strong>Note:</strong> The example extension featured in this article — <a href="https://github.com/mdn/webextensions-examples/tree/master/notify-link-clicks-i18n">notify-link-clicks-i18n</a> — is available on GitHub. Follow along with the source code as you go through the sections below.</p>
 </div>
 
 <h2 id="Anatomy_of_an_internationalized_extension">Anatomy of an internationalized extension</h2>
