--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/icons/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/icons/index.html
@@ -71,11 +71,11 @@ browser-compat: webextensions.manifest.icons
 </ol>
 
 <div class="notecard note">
-<p>Remember to include the <code>xmlns</code> attribute when creating the SVG. Otherwise, Firefox won't be able to display the icon.</p>
+<p><strong>Note:</strong> Remember to include the <code>xmlns</code> attribute when creating the SVG. Otherwise, Firefox won't be able to display the icon.</p>
 </div>
 
 <div class="note">
-<p>If you are using a program like Inkscape for creating SVG, you might want to save it as a "plain SVG". Firefox might be confused by various special namespaces and not display your icon.</p>
+<p><strong>Note:</strong> If you are using a program like Inkscape for creating SVG, you might want to save it as a "plain SVG". Firefox might be confused by various special namespaces and not display your icon.</p>
 </div>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
