--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/index.html
@@ -12,7 +12,7 @@ browser-compat: webextensions.manifest
 <p>{{AddonSidebar}}</p>
 
 <div class="notecard note">
-<p>This article describes manifest.json for web extensions. If you are looking for information about the manifest.json in PWAs, check out the <a href="/en-US/docs/Web/Manifest">Web App Manifest</a> article.</p>
+<p><strong>Note:</strong> This article describes manifest.json for web extensions. If you are looking for information about the manifest.json in PWAs, check out the <a href="/en-US/docs/Web/Manifest">Web App Manifest</a> article.</p>
 </div>
 
 <p>The <code>manifest.json</code> file is the only file that every extension using WebExtension APIs must contain.</p>
