--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/storage/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/storage/index.html
@@ -40,7 +40,7 @@ browser-compat: webextensions.manifest.storage
 <p>After declaring the policies, they are read from the {{WebExtAPIRef("storage.managed")}} API. However, if a policy value does not conform to the schema, then it is not published by the <code>storage.managed</code> API. It's up to the app to enforce the policies configured by the administrator.</p>
 
 <div class="notecard note">
-<p>Firefox does not define a schema for managed storage, see {{WebExtAPIRef("storage.managed")}} for more details.</p>
+<p><strong>Note:</strong> Firefox does not define a schema for managed storage, see {{WebExtAPIRef("storage.managed")}} for more details.</p>
 </div>
 
 <p>The <code>storage</code> key is an object that has the following required property:</p>
