--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme_experiment/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme_experiment/index.html
@@ -57,7 +57,7 @@ browser-compat: webextensions.manifest.theme_experiment
 <p>To discover the CSS selectors for Firefox UI elements or internal Firefox CSS variables use the <a href="/en-US/docs/Tools/Browser_Toolbox">browser toolbox</a>.</p>
 
 <div class="notecard note">
-<p>This key is only available for use in Firefox Developer Edition and Firefox Nightly channels and requires the <code>extensions.experiments.enabled</code> preference to be enabled. In Firefox 73 and earlier, the <code>extensions.legacy.enabled</code> had to be used instead.</p>
+<p><strong>Note:</strong> This key is only available for use in Firefox Developer Edition and Firefox Nightly channels and requires the <code>extensions.experiments.enabled</code> preference to be enabled. In Firefox 73 and earlier, the <code>extensions.legacy.enabled</code> had to be used instead.</p>
 </div>
 
 <div class="notecard warning">
