--- a/files/en-us/mozilla/add-ons/webextensions/modify_a_web_page/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/modify_a_web_page/index.html
@@ -47,11 +47,11 @@ tags:
 <p>The <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/content_scripts">content_scripts</a></code> key is how you load scripts into pages that match URL patterns. In this case, <code>content_scripts</code> instructs the browser to load a script called "page-eater.js" into all pages under <a href="/">https://developer.mozilla.org/</a>.</p>
 
 <div class="note">
-<p>Since the <code>"js"</code> property of <code>content_scripts</code> is an array, you can use it to inject more than one script into matching pages. If you do this the pages share the same scope, just like multiple scripts loaded by a page, and they are loaded in the order that they are listed in the array.</p>
+<p><strong>Note:</strong> Since the <code>"js"</code> property of <code>content_scripts</code> is an array, you can use it to inject more than one script into matching pages. If you do this the pages share the same scope, just like multiple scripts loaded by a page, and they are loaded in the order that they are listed in the array.</p>
 </div>
 
 <div class="note">
-<p>The <code>content_scripts</code> key also has a <code>"css"</code> property that you can use to inject CSS stylesheets.</p>
+<p><strong>Note:</strong> The <code>content_scripts</code> key also has a <code>"css"</code> property that you can use to inject CSS stylesheets.</p>
 </div>
 
 <p>Next, create a file called "page-eater.js" inside the "modify-page" directory, and give it the following contents:</p>
@@ -67,7 +67,7 @@ document.body.appendChild(header);</pre>
 <p>{{EmbedYouTube("lxf2Tkg6U1M")}}</p>
 
 <div class="note">
-<p>Note that although this video shows the content script working in <a href="https://addons.mozilla.org/en-US/firefox/">addons.mozilla.org</a>, content scripts are currently blocked for this site.</p>
+<p><strong>Note:</strong> Although this video shows the content script working in <a href="https://addons.mozilla.org/en-US/firefox/">addons.mozilla.org</a>, content scripts are currently blocked for this site.</p>
 </div>
 
 <h2 id="Modifying_pages_programmatically">Modifying pages programmatically</h2>
@@ -130,7 +130,7 @@ browser.contextMenus.onClicked.addListener(function(info, tab) {
 <p>{{EmbedYouTube("zX4Bcv8VctA")}}</p>
 
 <div class="note">
-<p>Note that although this video shows the content script working in <a href="https://addons.mozilla.org/en-US/firefox/">addons.mozilla.org</a>, content scripts are currently blocked for this site.</p>
+<p><strong>Note:</strong> Although this video shows the content script working in <a href="https://addons.mozilla.org/en-US/firefox/">addons.mozilla.org</a>, content scripts are currently blocked for this site.</p>
 </div>
 
 <h2 id="Messaging">Messaging</h2>
@@ -158,7 +158,7 @@ browser.contextMenus.onClicked.addListener(function(info, tab) {
 </table>
 
 <div class="notecard note">
-<p>In addition to this method of communication, which sends one-off messages, you can also use a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Content_scripts#connection-based_messaging">connection-based approach to exchange messages</a>. For advice on choosing between the options, see <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Content_scripts#choosing_between_one-off_messages_and_connection-based_messaging">Choosing between one-off messages and connection-based messaging</a>.</p>
+<p><strong>Note:</strong> In addition to this method of communication, which sends one-off messages, you can also use a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Content_scripts#connection-based_messaging">connection-based approach to exchange messages</a>. For advice on choosing between the options, see <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Content_scripts#choosing_between_one-off_messages_and_connection-based_messaging">Choosing between one-off messages and connection-based messaging</a>.</p>
 </div>
 
 <p>Let's update our example to show how to send a message from the background script.</p>
@@ -212,7 +212,7 @@ browser.runtime.onMessage.addListener(eatPageReceiver);
 <p>Since <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/executeScript">tabs.executeScript()</a></code> is an asynchronous function, and to ensure we send message only after listener has been added in <code>page-eater.js</code>, we use <code>onExecuted()</code> which will be called after <code>page-eater.js</code> executed.</p>
 
 <div class="note">
-<p>Press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd> (or <kbd>Cmd</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd> on macOS) OR <code>web-ext run --bc</code> to open <a href="/en-US/docs/Tools/Browser_Console">Browser Console</a> to view <code>console.log</code> in background script.</p>
+<p><strong>Note:</strong> Press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd> (or <kbd>Cmd</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd> on macOS) OR <code>web-ext run --bc</code> to open <a href="/en-US/docs/Tools/Browser_Console">Browser Console</a> to view <code>console.log</code> in background script.</p>
 
 <p>Alternatively, use <a href="/en-US/docs/Mozilla/Add-ons/Add-on_Debugger">Add-on Debugger</a>  which allows you set breakpoint. There is currently no way to <a href="https://github.com/mozilla/web-ext/issues/759">start Add-on Debugger directly from web-ext</a>.</p>
 </div>
@@ -224,7 +224,7 @@ browser.runtime.onMessage.addListener(eatPageReceiver);
 });</pre>
 
 <div class="note">
-<p>These examples all inject JavaScript; you can also inject CSS programmatically using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/insertCSS">tabs.insertCSS()</a></code> function.</p>
+<p><strong>Note:</strong> These examples all inject JavaScript; you can also inject CSS programmatically using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/insertCSS">tabs.insertCSS()</a></code> function.</p>
 </div>
 
 <h2 id="Learn_more">Learn more</h2>
