--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
@@ -10,7 +10,7 @@ tags:
 <div>{{AddonSidebar}}</div>
 
 <div class="note">
-<p>This feature is available since Firefox 54.</p>
+<p><strong>Note:</strong> This feature is available since Firefox 54.</p>
 </div>
 
 <p>When an extension provides tools that are of use to developers, it's possible to add a UI for them to the browser's developer tools as a new panel.</p>
