--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/index.html
@@ -11,7 +11,7 @@ tags:
 <p>Extensions that use WebExtension APIs are provided with several user interface options so that their functionality can be made available to the user. A summary of those options is provided below, with a more detailed introduction to each user interface option in this section.</p>
 
 <div class="note">
-<p>For advice on using these UI components to create a great user experience in your extension, please see the <a href="https://extensionworkshop.com/documentation/develop/user-experience-best-practices/">User experience best practices</a> article.</p>
+<p><strong>Note:</strong> For advice on using these UI components to create a great user experience in your extension, please see the <a href="https://extensionworkshop.com/documentation/develop/user-experience-best-practices/">User experience best practices</a> article.</p>
 </div>
 
 <table class="standard-table">
