--- a/files/en-us/mozilla/add-ons/webextensions/working_with_files/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/working_with_files/index.html
@@ -28,7 +28,7 @@ tags:
 <p>You can let the user download to a location of their choice by specifying the <code><var>saveAs</var></code> parameter.</p>
 
 <div class="note">
-<p>Using <a href="/en-US/docs/Web/API/URL/createObjectURL">URL.createObjectURL()</a> you can also download files and blobs defined in your JavaScript, which can include local content retrieved from IndexedDB.</p>
+<p><strong>Note:</strong> Using <a href="/en-US/docs/Web/API/URL/createObjectURL">URL.createObjectURL()</a> you can also download files and blobs defined in your JavaScript, which can include local content retrieved from IndexedDB.</p>
 </div>
 
 <p>The downloads API also provides features to cancel, pause, resume, erase, and remove downloads; search for downloaded files in the download manager; show downloaded files in the computer’s file manager; and open a file in an associated application.</p>
@@ -47,7 +47,7 @@ tags:
  API references: <a href="/en-US/docs/Web/HTML/Element/input/file">HTML input element</a> | <a href="/en-US/docs/Web/API/File">DOM File API</a></p>
 
 <div class="note">
-<p>If you want to access or process all the files in a selected folder, you can do so using <code>&lt;input type="file" </code><code>webkitdirectory="true"/&gt;</code> to select the folder and return all the files it contains.</p>
+<p><strong>Note:</strong> If you want to access or process all the files in a selected folder, you can do so using <code>&lt;input type="file" </code><code>webkitdirectory="true"/&gt;</code> to select the folder and return all the files it contains.</p>
 </div>
 
 <h2 id="Open_files_in_an_extension_using_drag_and_drop">Open files in an extension using drag and drop</h2>
