--- a/files/en-us/mozilla/add-ons/webextensions/browser_support_for_javascript_apis/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/browser_support_for_javascript_apis/index.html
@@ -9,8 +9,8 @@ tags:
 
 <p>{{WebExtAllCompatTables}}</p>
 
-<div class="note"><strong>Acknowledgments</strong>
-<p>Microsoft Edge compatibility data is supplied by Microsoft Corporation and is included here under the Creative Commons Attribution 3.0 United States License.</p>
+<div class="note">
+<p><strong>Note:</strong> Microsoft Edge compatibility data is supplied by Microsoft Corporation and is included here under the Creative Commons Attribution 3.0 United States License.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
