--- a/files/en-us/mozilla/add-ons/webextensions/build_a_cross_browser_extension/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/build_a_cross_browser_extension/index.html
@@ -53,7 +53,7 @@ tags:
 <p>Firefox also supports callbacks for the APIs that support the <code>chrome.*</code> namespace. However, using promises (and the <code>browser.*</code> namespace) is recommended. Promises has been adopted as part of the proposed standard. It greatly simplifies asynchronous event handling, particularly where you need to chain events together.</p>
 
 <div class="notecard note">
-<p>If you’re unfamiliar with the differences between these two methods, take a look at <a href="https://medium.com/codebuddies/getting-to-know-asynchronous-javascript-callbacks-promises-and-async-await-17e0673281ee">Getting to know asynchronous JavaScript: Callbacks, Promises and Async/Await</a> or the MDN <a href="/en-US/docs/Web/JavaScript/Guide/Using_promises">Using promises</a> page.</p>
+<p><strong>Note:</strong> If you’re unfamiliar with the differences between these two methods, take a look at <a href="https://medium.com/codebuddies/getting-to-know-asynchronous-javascript-callbacks-promises-and-async-await-17e0673281ee">Getting to know asynchronous JavaScript: Callbacks, Promises and Async/Await</a> or the MDN <a href="/en-US/docs/Web/JavaScript/Guide/Using_promises">Using promises</a> page.</p>
 </div>
 
 <h4 id="The_WebExtension_browser_API_Polyfill">The WebExtension browser API Polyfill</h4>
@@ -87,7 +87,7 @@ tags:
 <p>Your goal is to ensure that the polyfill executes in your extension before any other script expecting the <code>browser.*</code> API namespace executes.</p>
 
 <div class="notecard note">
-<p>For more details and information on how to use the polyfill with a module bundler, see the <a href="https://github.com/mozilla/webextension-polyfill/blob/master/README.md">project’s readme on GitHub.</a></p>
+<p><strong>Note:</strong> For more details and information on how to use the polyfill with a module bundler, see the <a href="https://github.com/mozilla/webextension-polyfill/blob/master/README.md">project’s readme on GitHub.</a></p>
 </div>
 
 <p>There are other polyfill options but, at the time of writing, none provide the coverage of the WebExtension browser API Polyfill. So, where you haven’t targeted Firefox as your first choice, your options are to accept the limitations of alternative polyfills, port to Firefox and add cross-browser support, or develop your own polyfill.</p>
