--- a/files/en-us/mozilla/add-ons/webextensions/developing_webextensions_for_thunderbird/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/developing_webextensions_for_thunderbird/index.html
@@ -15,7 +15,7 @@ tags:
 <h2 id="API_differences">API differences</h2>
 
 <div class="notecard note">
-<p>See <a href="https://thunderbird-webextensions.readthedocs.io/en/latest/">ReadTheDocs</a> for Thunderbird specific WebExtension API documentation.</p>
+<p><strong>Note:</strong> See <a href="https://thunderbird-webextensions.readthedocs.io/en/latest/">ReadTheDocs</a> for Thunderbird specific WebExtension API documentation.</p>
 </div>
 
 <p>Being both Gecko based, Thunderbird supports many of the APIs Firefox supports, with some differences, see <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Browser_compatibility_for_manifest.json">browser compatibility for manifest.json</a> and <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Browser_support_for_JavaScript_APIs">browser support for JavaScript APIs</a> for details.</p>
