--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_action/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_action/index.html
@@ -80,7 +80,7 @@ browser-compat: webextensions.manifest.browser_action
     <p>The <a href="https://github.com/mdn/webextensions-examples/tree/master/latest-download">latest-download</a> example extension uses <code>browser_style</code> in its popup.</p>
 
     <div class="notecard note">
-    <p>Setting <code>browser_style</code> to <code>true</code> prevents users from selecting text in an extension's popup or sidebar content. This is normal behavior. You can't select parts of the UI in the browser. However, You can work around this limitation to allow your users to select text in two ways:</p>
+    <p><strong>Note:</strong> Setting <code>browser_style</code> to <code>true</code> prevents users from selecting text in an extension's popup or sidebar content. This is normal behavior. You can't select parts of the UI in the browser. However, You can work around this limitation to allow your users to select text in two ways:</p>
 
     <ol>
      <li>Set <code>browser_style</code> to <code>false</code></li>
