--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
@@ -54,7 +54,7 @@ browser-compat: webextensions.manifest.theme
 </div>
 
 <div class="note">
-<p><strong>Theme support in Firefox for Android</strong>: A new version of Firefox for Android, based on GeckoView, is under development. A <a href="https://play.google.com/store/apps/details?id=org.mozilla.fenix" rel="noreferrer nofollow">pre-release version</a> is available. The pre-release version does not support themes.</p>
+<p><strong>Note:</strong> A new version of Firefox for Android, based on GeckoView, is under development. A <a href="https://play.google.com/store/apps/details?id=org.mozilla.fenix">pre-release version</a> is available. The pre-release version does not support themes.</p>
 </div>
 
 <h2 id="Image_formats">Image formats</h2>
@@ -157,7 +157,7 @@ browser-compat: webextensions.manifest.theme
     <p>The URL of a foreground image to be added to the header area and anchored to the upper right corner of the header area.</p>
 
     <div class="notecard note">
-    <p>Chrome anchors the image to the top left of the header and if the image doesn’t fill the header area tile the image.</p>
+    <p><strong>Note:</strong> Chrome anchors the image to the top left of the header and if the image doesn’t fill the header area tile the image.</p>
     </div>
 
     <p>Optional in desktop Firefox 60 onwards. One of <code>theme_frame</code> or <code>headerURL</code> had to be specified before Firefox 60.</p>
@@ -198,13 +198,13 @@ browser-compat: webextensions.manifest.theme
 </table>
 
 <div class="notecard note">
-<p>Where a component is affected by multiple color properties, the properties are listed in order of precedence.</p>
+<p><strong>Note:</strong> Where a component is affected by multiple color properties, the properties are listed in order of precedence.</p>
 </div>
 
 <p>All these properties can be specified as either a string containing any valid <a href="/en-US/docs/Web/CSS/color_value">CSS color string</a> (including hexadecimal), or an RGB array, such as <code>"tab_background_text": [ 107 , 99 , 23 ]</code>.</p>
 
 <div class="notecard note">
-<p><a href="#chrome_compatibility">In Chrome, colors may only be specified as RGB arrays</a>.</p>
+<p><strong>Note:</strong> <a href="#chrome_compatibility">In Chrome, colors may only be specified as RGB arrays</a>.</p>
 
 <p>In Firefox for Android colors can be specified using:</p>
 
@@ -255,7 +255,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of text and icons in the bookmark and find bars. Also, if <code>tab_text</code> isn't defined it sets the color of the active tab text and if <code>icons</code> isn't defined the color of the toolbar icons. Provided as Chrome compatible alias for <code>toolbar_text</code>.</p>
 
     <div class="notecard note">
-    <p>Ensure any color used contrasts well with those used in <code>frame</code> and <code>frame_inactive</code> or <code>toolbar</code> if you're using that property.</p>
+    <p><strong>Note:</strong> Ensure any color used contrasts well with those used in <code>frame</code> and <code>frame_inactive</code> or <code>toolbar</code> if you're using that property.</p>
 
     <p>Where <code>icons</code> isn't defined, also ensure good contrast with<code> button_background_active</code> and <code>button_background_hover</code>.</p>
     </div>
@@ -323,7 +323,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of toolbar icons, excluding those in the find toolbar.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>frame</code>,  <code>frame_inactive</code>, <code>button_background_active</code>, and <code>button_background_hover</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>frame</code>,  <code>frame_inactive</code>, <code>button_background_active</code>, and <code>button_background_hover</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -347,7 +347,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of toolbar icons in attention state such as the starred bookmark icon or finished download icon.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>frame</code>,  <code>frame_inactive</code>, <code>button_background_active</code>, and <code>button_background_hover</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>frame</code>,  <code>frame_inactive</code>, <code>button_background_active</code>, and <code>button_background_hover</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -429,7 +429,7 @@ browser-compat: webextensions.manifest.theme
     <p>The new tab page text color.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with that used in <code>ntp_background</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with that used in <code>ntp_background</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -494,7 +494,7 @@ browser-compat: webextensions.manifest.theme
     <p>The background color of items highlighted using the keyboard inside popups (such as the selected url bar dropdown item).</p>
 
     <div class="notecard note">
-    <p>It's recommended to define <code>popup_highlight_text</code> to override the browser default text color on various platforms.</p>
+    <p><strong>Note:</strong> It's recommended to define <code>popup_highlight_text</code> to override the browser default text color on various platforms.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -519,7 +519,7 @@ browser-compat: webextensions.manifest.theme
     <p>The text color of items highlighted inside popups.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with that used in <code>popup_highlight</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with that used in <code>popup_highlight</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -544,7 +544,7 @@ browser-compat: webextensions.manifest.theme
     <p>The text color of popups.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with that used in <code>popup</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with that used in <code>popup</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -627,7 +627,7 @@ browser-compat: webextensions.manifest.theme
     <p>The text color of highlighted rows in sidebars.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with that used in <code>sidebar_highlight</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with that used in <code>sidebar_highlight</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -650,7 +650,7 @@ browser-compat: webextensions.manifest.theme
     <p>The text color of sidebars.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with that used in <code>sidebar</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with that used in <code>sidebar</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -698,7 +698,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of the text displayed in the inactive page tabs. If <code>tab_text</code> or <code>bookmark_text</code> isn't specified, applies to the active tab text.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>tab_selected</code> or <code>frame</code> and  <code>frame_inactive</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>tab_selected</code> or <code>frame</code> and  <code>frame_inactive</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -785,7 +785,7 @@ browser-compat: webextensions.manifest.theme
     <p>From Firefox 59, it represents the text color for the selected tab. If <code>tab_line</code> isn't specified, it also defines the color of the selected tab line.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>tab_selected</code> or <code>frame</code> and  <code>frame_inactive</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>tab_selected</code> or <code>frame</code> and  <code>frame_inactive</code>.</p>
     </div>
 
     <p>From Firefox 55 to 58, it is incorrectly implemented as alias for <code>"textcolor"</code></p>
@@ -994,7 +994,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color used to draw text that's currently selected in the URL bar (and the search bar, if it's configured to be separate box).</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>toolbar_field_highlight</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>toolbar_field_highlight</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -1047,7 +1047,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of text in fields in the toolbar, such as the URL bar. This also sets the color of text in the <strong>Find in page</strong> field.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>toolbar_field</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>toolbar_field</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -1073,7 +1073,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of text in focused fields in the toolbar, such as the URL bar.</p>
 
     <div class="notecard note">
-    <p>Ensure the color used contrasts well with those used in <code>toolbar_field_focus</code>.</p>
+    <p><strong>Note:</strong> Ensure the color used contrasts well with those used in <code>toolbar_field_focus</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
@@ -1100,7 +1100,7 @@ browser-compat: webextensions.manifest.theme
     <p>The color of toolbar text. This also sets the color of  text in the "Find" bar.</p>
 
     <div class="notecard note">
-    <p>For compatibility with Chrome, use the alias <code>bookmark_text</code>.</p>
+    <p><strong>Note:</strong> For compatibility with Chrome, use the alias <code>bookmark_text</code>.</p>
     </div>
 
     <details open><summary>See example</summary>
