--- a/files/en-us/mozilla/add-ons/webextensions/native_messaging/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/native_messaging/index.html
@@ -77,7 +77,7 @@ tags:
 
 <div class="notecard note">
 <p><strong>Note:</strong> When using optional permission, check that permission has been granted and, where necessary, request permission from the user with the {{WebExtAPIRef("permissions")}} API before communicating with the native application.</p>
-</div> 
+</div>
 
 <h3 id="App_manifest">App manifest</h3>
 
@@ -173,7 +173,7 @@ python -u "c:\\path\\to\\native-messaging\\app\\ping_pong.py"</pre>
 </ul>
 
 <div class="note">
-<p>Chrome  handles the passed arguments differently:</p>
+<p><strong>Note:</strong> Chrome  handles the passed arguments differently:</p>
 
 <ul>
  <li>On Linux and Mac, Chrome passes <em>one</em> argument: the origin of the extension that started it (in the form <code>chrome-extension://[extensionID]</code>). This enables the app to identify the extension.</li>
