--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
@@ -27,7 +27,7 @@ tags:
 </div>
 
 <div class="notecard note">
-<p><strong>Google Chrome</strong> and <strong>Opera</strong> use <code>chrome_style</code> instead of <code>browser_style</code>, so if you wish to support them, you need to add both keys.</p>
+<p><strong>Note:</strong> <strong>Google Chrome</strong> and <strong>Opera</strong> use <code>chrome_style</code> instead of <code>browser_style</code>, so if you wish to support them, you need to add both keys.</p>
 </div>
 
 <p>In Firefox, the stylesheet can be seen at <code>chrome://browser/content/extension.css</code>. The extra stylesheet at <code>chrome://browser/content/extension-mac.css</code> is also included on OS X.</p>
@@ -86,7 +86,7 @@ tags:
 </table>
 
 <div class="notecard note">
-<p>See {{bug(1465256)}} for removal of this unnecessary requirement.</p>
+<p><strong>Note:</strong> See {{bug(1465256)}} for removal of this unnecessary requirement.</p>
 </div>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
