--- a/files/en-us/mozilla/add-ons/webextensions/what_are_webextensions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/what_are_webextensions/index.html
@@ -8,7 +8,7 @@ tags:
 <div>{{AddonSidebar}}</div>
 
 <div class="notecard note">
-<p>If you are already familiar with the basic concepts of browser extensions, skip this section to <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Anatomy_of_a_WebExtension">see how extension files are put together</a>. Then, use the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions#reference">reference documentation</a> to start building your extension. Visit <a href="https://extensionworkshop.com/?utm_source=developer.mozilla.org&utm_medium=documentation&utm_campaign=your-first-extension">Firefox Extension Workshop</a> to learn more about the workflow for testing, publishing, and extensions for Firefox.</p>
+<p><strong>Note:</strong> If you are already familiar with the basic concepts of browser extensions, skip this section to <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Anatomy_of_a_WebExtension">see how extension files are put together</a>. Then, use the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions#reference">reference documentation</a> to start building your extension. Visit <a href="https://extensionworkshop.com/?utm_source=developer.mozilla.org&utm_medium=documentation&utm_campaign=your-first-extension">Firefox Extension Workshop</a> to learn more about the workflow for testing, publishing, and extensions for Firefox.</p>
 </div>
 
 <p>An extension adds features and functions to a browser. It’s created using familiar web-based technologies—HTML, CSS, and JavaScript. It can take advantage of the same web APIs as JavaScript on a web page, but an extension also has access to its own set of JavaScript APIs. This means that you can do a lot more in an extension than you can with code in a web page. Here are just a few examples of the things you can do:</p>
