--- a/files/en-us/mozilla/add-ons/webextensions/work_with_the_cookies_api/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/work_with_the_cookies_api/index.html
@@ -14,7 +14,7 @@ tags:
 <p>With the Cookies API your extensions have access to capabilities similar to those used by websites to store and read cookies. The API’s features give extensions the ability to store information on a site-by-site basis. So, as we shall see in the example, you could store details of a user’s choice of background color for a site. Then, when the user revisits the site, your extension can use the API’s ability to get details about cookies and read them to recover the user’s choice and apply it to the website.</p>
 
 <div class="note">
-<p>The behavior of cookies can be controlled using the {{WebExtAPIRef("privacy.websites")}} <code>cookieConfig</code> property. This property controls whether and how cookies are accepted or whether all cookies are treated as session cookies.</p>
+<p><strong>Note:</strong> The behavior of cookies can be controlled using the {{WebExtAPIRef("privacy.websites")}} <code>cookieConfig</code> property. This property controls whether and how cookies are accepted or whether all cookies are treated as session cookies.</p>
 </div>
 
 <h2 id="Permissions">Permissions</h2>
